tracker: Don't unref manager in the loop in "tracker index -f" subcommand

Must be unref'ed after the loop. Fixes crash if >1 files are provided.

https://bugzilla.gnome.org/show_bug.cgi?id=767024